Fix horizontal scroll on kanban board (#39)

--- a/src/sass/content.scss
+++ b/src/sass/content.scss
@@ -37,22 +37,10 @@ body.better-jira {
     z-index: 2;
   }
 
-  /*
-  |--------------------------------------------------------------------------
-  | Firefox
-  |--------------------------------------------------------------------------
-  */
-
   #ghx-pool-column {
-    display: block;
+    display: block !important;
     overflow-x: scroll !important;
   }
-
-  /*
-  |--------------------------------------------------------------------------
-  | Resizable Details View
-  |--------------------------------------------------------------------------
-  */
 
   .better-resize {
     z-index: 90;
